finished js boilerplate

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <title>sass boiler plate</title>
 
 <!---stylesheets--->
-<link rel="stylesheet"href="/stylesheets/master.css" type="text/css">
+<link rel="stylesheet"href="stylesheets/master.css" type="text/css">
 
+<!---javascript--->
+<script type="text/javascript" src="scripts/core.js"></script>
   </head>
   <body>
     <p>this is a simple html/css/sass boiler plate ready for you!</p>
