--- a/index.html
+++ b/index.html
@@ -2,15 +2,20 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>sass boiler plate</title>
-
-<!---stylesheets--->
-<link rel="stylesheet"href="stylesheets/master.css" type="text/css">
-
-<!---javascript--->
-<script type="text/javascript" src="scripts/core.js"></script>
+    <title>JavaScript Tests</title>
+    <!-- STYLESHEETS -->
+    <link rel="stylesheet" href="stylesheets/master.css" type="text/css">
+    <!-- JAVASCRIPT -->
+    <script type="text/javascript" src="scripts/core.js"></script>
   </head>
   <body>
-    <p>this is a simple html/css/sass boiler plate ready for you!</p>
+    <h1>Input</h1><br>
+    <h2>What number do you want me to find the highest factor for?</h2><br>
+    <input type="text" name="" id="userInput"><br><br>
+    <input type="checkbox" name="onlyHighest" value="" id="onlyHighest"> Find only highest factor<br><br>
+    <button type="button" name="button" onclick="Calculate()">Calculate</button>
+    <button type="button" name="reset" onclick="Reset()">Reset</button><br><br>
+    <h1>Output</h1><br>
+    <p id="jsOutlet"><em style="font-style: italic;">Output...</em></p>
   </body>
 </html>
